# sgj_ros_ws

./: .gitignore
sgj_pkg/: CMakeLists.txt  package.xml
sgj_pkg/action/: MoveRobot.action
sgj_pkg/msg/: Student.msg
sgj_pkg/scripts/: grade_client.py  grade_server.py  move_robot_client.py  move_robot_server.py  student_publisher.py  student_subscriber.py
sgj_pkg/sgj_pkg/: __init__.py
sgj_pkg/srv/: CalculateGrade.srv
